--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: username/repo
+  repo: treesheeptw/treesheepdotcom
   branch: main # Branch to update (optional; defaults to master)
   base_url: https://github.com
   auth_endpoint: /api/auth
