--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: treesheeptw/treesheepdotcom
   branch: main # Branch to update (optional; defaults to master)
-  base_url: https://github.com
+  base_url: https://tree-sheep.com
   auth_endpoint: /api/auth
 media_folder: static/img
 public_folder: /img
