imported theme module

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,7 @@
 baseURL = 'https://tree-sheep.com'
 languageCode = 'en-us'
-title = 'Hugo'
+title = '樹羊'
+[module]
+  [[module.imports]]
+    path = 'not-much'
+theme = not-much
