--- a/hugo.yml
+++ b/hugo.yml
@@ -5,3 +5,17 @@ Module:
   imports:
   - path: not-much
 theme: not-much
+menu:
+  main:
+    - identifier: about
+      name: about
+      title: About
+      url: /
+    - identifier: posts
+      name: posts
+      title: Posts
+      url: /posts
+    - identifier: github
+      name: github
+      title: GitHub
+      url: https://github.com/treesheeptw
