--- a/hugo.yml
+++ b/hugo.yml
@@ -15,6 +15,10 @@ menu:
       name: posts
       title: Posts
       url: /posts
+    - identifier: f1
+      name: f1
+      title: F1
+      url: /f1
     - identifier: github
       name: github
       title: GitHub
