--- a/hugo.yml
+++ b/hugo.yml
@@ -38,6 +38,7 @@ menu:
 params:
   theme: auto
   palette: catpuccin
+  dateFormat: 2006年01月02日 +0800
 copyright: © 2025 Chiachun Lin. All rights reserved.
 math: true
 showThemeNotice: false
