--- a/hugo.yml
+++ b/hugo.yml
@@ -35,6 +35,10 @@ menu:
       name: memo
       title: Memo
       url: https://memo.tree-sheep.com
+    - identifier: n8n
+      name: n8n
+      title: n8n
+      url: https://n8n.tree-sheep.com
 params:
   theme: auto
   palette: catpuccin
