--- a/hugo.yml
+++ b/hugo.yml
@@ -39,6 +39,10 @@ menu:
       name: n8n
       title: n8n
       url: https://n8n.tree-sheep.com
+    - identifier: cms
+      name: cms
+      title: CMS
+      url: https://tree-sheep.com/admin
 params:
   theme: auto
   palette: catpuccin
